--- a/public/css/reset.less
+++ b/public/css/reset.less
@@ -85,7 +85,7 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: "PingFangSC-Regular", "PingFang SC", "Heiti SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #f5f5f9;
+ // background-color: #f5f5f9;
 }
 
 body {
